vendor/thiserror-1.0.24/tests/ui/duplicate-enum-source.stderr
error: duplicate #[source] attribute
 --> $DIR/duplicate-enum-source.rs:8:9
  |
8 |         #[source]
  |         ^^^^^^^^^
