vendor/thiserror-1.0.24/tests/ui/duplicate-enum-source.rs
use thiserror::Error;

#[derive(Error, Debug)]
pub enum ErrorEnum {
    Confusing {
        #[source]
        a: std::io::Error,
        #[source]
        b: anyhow::Error,
    },
}

fn main() {}
